reworked flight service